--- a/index4.html
+++ b/index4.html
@@ -26,6 +26,11 @@
           </form>
       </div>
   </div>
+  <script type="text/javascript" src="{% static 'js/styles.js' %}">
+  </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoOk2exnpYMGhrh-7VvmdHCh5gcA-qhNM&callback=initMap">
+  </script>
+  
 
 </body>
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfeePmXWfr3eKsSfpBlGsycHdES0kyOsI&libraries=places" async defer></script> -->
